welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: missing parameter type for expanded function ((x$1) => setCouleurBrosse.update(x$1, T(i)))
    	setCouleurBrosse(_)=T(i)
                         ^Array1:15: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
    	setCouleurBrosse(_)=T(i)
        ^